# fox-misc

./: CMakeLists.txt  README.md  main.cpp
include/: dmfmisc.hpp
include/dmfmisc/: logger.hpp  string.hpp
include/fox-misc/: fox-logger.hpp  fox-string.hpp
src/: fox-logger.cpp  fox-string.cpp
test/: CMakeLists.txt  test_00.cpp
